--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <p>Please type a letter to begin</p>
 
                 <br>    
-                <p>Wins:</p>
-                <p>Losses:</p>
-                <p><u>Guesses Left:</u></p>
-                <p>Your Guesses so far:</p>
+                <p>Wins: <span id="wins">0</span></p>
+                <p>Losses: <span id="losses">0</span></p>
+                <p><u>Guesses Left: <span id="guesses-left"></span></u></p>
+                <p>Your Guesses so far: <span id="guesses-so-far"></span></p>
 
     </div>
         
